test/deca/context/valid/3_28_rvalue_float_int.deca
// Description:
//   Affectation de valeurs
// 
// Résultat : assign_compatible = true car t1 float, t2 int

{
    float t1;
    int t2 = 1;
    t1 = t2;
    
}