test/deca/context/invalid/3_28_rvalue_assign_bool_float.deca
// Description:
//   cast de deux types incompatibles
// 
// Résultat : 
//  Ligne 10 : conversion de deux types incompatibles

{
    boolean b = true;
    float f;
    f = ;

}